# geekool

./: Cargo.toml
src/: main.rs
src/charactor/: comp.rs  sys.rs
src/ddd/: mod.rs
src/employ/: comp.rs  mod.rs  sys.rs
src/job/: comp.rs  sys.rs
src/story/: mod.rs  scene1.rs
